--- a/bundle.yaml
+++ b/bundle.yaml
@@ -7,35 +7,35 @@ applications:
     to:
       - "1"
   "activemq":
-    charm: "/home/ubuntu/qrama-charms/xenial/activemq"
+    charm: "cs:~tengu-team/activemq-1"
     num_units: 1
     expose: true
     to:
       - "1"
   "tengu-topic":
-    charm: "/home/ubuntu/qrama-charms/xenial/activemq-topic"
+    charm: "cs:~tengu-team/activemq-topic-0"
   "rss-feed":
-    charm: "/home/ubuntu/qrama-charms/xenial/data-source"
+    charm: "cs:~tengu-team/demo-data-source-0"
     num_units: 1
     to:
       - "lxd:0"
   "tengu-db":
-    charm: "/home/ubuntu/qrama-charms/xenial/mongo-database"
+    charm: "cs:~tengu-team/mongo-database-0"
   "nodered-deployer":
-    charm: "/home/ubuntu/qrama-charms/xenial/nodered-deployer"
+    charm: "cs:~tengu-team/nodered-deployer-1"
   "nodered":
-    charm: "/home/ubuntu/qrama-charms/xenial/node-red"
+    charm: "cs:~tengu-team/node-red-1"
     num_units: 1
     expose: true
     to:
       - "2"
   "activemq-flow":
-    charm: "/home/ubuntu/qrama-charms/xenial/activemq-flow"
+    charm: "cs:~tengu-team/activemq-flow-2"
     num_units: 1
     to:
       - "lxd:0"
   "bundle-api":
-    charm: "/home/ubuntu/qrama-charms/xenial/streambundle-api"
+    charm: "cs:~tengu-team/demo-bundle-api-1"
     num_units: 1
     expose: true
     to:
